fixed issue with wrap-reverse

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -59,6 +59,10 @@ body
     .small-hr-left
       margin: 15px auto
 
+  @media only screen and (max-width: 1000px)
+    .wrap-reverse
+      flex-wrap: wrap-reverse
+
 //	Typography
 a
   color: #fff
