--- a/assets/css/4-pages/_home.sass
+++ b/assets/css/4-pages/_home.sass
@@ -13,6 +13,10 @@
   li
     padding: 10px 0
 
+  @media only screen and (max-width: 1000px)
+    li
+      margin: 10px
+
 .intel
   text-align: center
   margin: 0 auto
